# mac-youtube.py

./: .travis.yml  README.md  classifiers.txt  requirements.txt  requires.txt  setup.cfg  setup.py  todo.txt
mac_youtube/: __init__.py  download.py  pause.py  play.py  playing.py  urls.py
tests/: requirements.txt  run.sh
tests/mac-youtube/examples/: pause.py  play.py  playing.py  urls.py
tests/mac-youtube/examples/cli/: download.sh  pause.sh  play.sh  playing.sh  urls.sh
tests/mac-youtube/examples/functions/: download.py  info.py  pause.py  play.py  playing.py  urls.py
