[metadata]
name = mac-youtube
version = 2018.12.19
url = https://github.com/looking-for-a-job/mac-youtube.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = youtube

[options]
install_requires = 
	Click
	google_chrome
	mac_icon
	public
	requests
	runcmd
	setuptools
	youtube_dl
packages = 
	mac_youtube
