# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-youtube
version = 2019.3.22
url = https://github.com/looking-for-a-job/mac-youtube.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = youtube

[options]
install_requires = 
	click
	google_chrome
	public
	runcmd
	setuptools
	youtube_dl
packages = 
	mac_youtube
